# voxtral.cpp-cuda

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CUDA_BACKEND.md  CUDA_IMPLEMENTATION_SUMMARY.md  FINAL_PERFORMANCE_REPORT.md  JAPANESE_ASR_ANALYSIS.md  OPTIMIZATION_GUIDE.md  OPTIMIZATION_REPORT.md  PROJECT_COMPLETION_REPORT.md  QUICKSTART_OPTIMIZED.sh  QUICKSTART_REALTIME.sh  README.md  REALTIME_IMPLEMENTATION_SUMMARY.md  REALTIME_TRANSCRIPTION.md  compare_performance.sh  demo_realtime.sh  test_cuda.sh  test_realtime.sh
.github/workflows/: build.yml
include/: voxtral.h
samples/: 8297-275156-0000.json  8297-275156-0000.txt  8297-275156-0001.json  8297-275156-0001.txt  8297-275156-0002.json  8297-275156-0002.txt
src/: main.cpp  voxtral-bench.cpp  voxtral-realtime-optimized.cpp  voxtral-realtime-translate.cpp  voxtral-realtime.cpp  voxtral.cpp
tests/: benchmark_transcription.py
tools/: download_model.sh  quantize_all.py
